fixed input spacing issue

--- a/SET/src/app/new-query-create/new-query-create.component.css
+++ b/SET/src/app/new-query-create/new-query-create.component.css
@@ -85,7 +85,7 @@ h1 {
     border-radius: 5px;
     height: 50%;
     width:90%;
-    /* display: inline-block; */
+    display: grid;
   }
   .submit-clear {
     position: absolute;
@@ -114,15 +114,12 @@ h1 {
   }
   #underneath-div{
     border: none;
-    padding-top: 1%;
-    padding-left: .5%;
-    border-radius: 5px;
     width: 100%;
     height: 100%;
+    display: flex;
+    justify-content: left;
     text-align: left;
     position: absolute;
-    top: 20%;
-    /*left: 0;*/
     font-family: 'Comic Sans MS', cursive;
     font-size: 25px;
     z-index: 2;
@@ -131,6 +128,10 @@ h1 {
     -ms-overflow-style: none;
     scrollbar-width: none;
     pointer-events: none;
+  }
+
+  app-query-word {
+    margin-top: .5%;
   }
 
   #feedback p {
@@ -280,6 +281,7 @@ h1 {
   padding-top: 7.5%;
   display: flex;
   justify-content: center;
+  margin-bottom: 2.5%;
   /* background-color: #08892f; */
 }
 
